<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed_camera</name>
  <version>0.0.0</version>
  <description>HAL for Camera StereoLab ZED2</description>
  <maintainer email="marco.lapolla5@gmail.com">Marco Lapolla</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
